--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -107,6 +107,18 @@
                     </a>
                 </div>
             }
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=EP")">
+                    <img src="@Url.Content("~/Content/images/ep.png")" alt="leave" class="center-block" />
+                    <p class="text-center">设备故障报修</p>
+                </a>
+            </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Home/EleProcess")">
+                    <img src="@Url.Content("~/Content/images/elepr.png")" alt="assist" class="center-block" />
+                    <p class="text-center">电子公司专用流程</p>
+                </a>
+            </div>
             
         </div>
     </div>
