--- a/EmpInfo/Views/Report/CheckAssistantEmp.cshtml
+++ b/EmpInfo/Views/Report/CheckAssistantEmp.cshtml
@@ -20,9 +20,9 @@
         </div>
     </div>
     @{
-        string[] texts = new string[] { "姓名", "厂牌", "类型", "部门", "条形码", "工资类型", "生效时间", "任命时间", "职务", "职级", "组别", "备注" };
+        string[] texts = new string[] { "姓名", "厂牌", "类型", "部门", "条形码", "工资类型", "生效时间", "任命时间", "职务", "职级", "组别", "上班班次", "备注" };
         string[] values = new string[] { emp.emp_name,emp.emp_no1,emp.emp_type,emp.dept_name,emp.emp_no,emp.pay_type,emp.sx_date.ToString("yyyy-MM-dd"),
-            emp.rm_date,emp.emp_zw,emp.emp_zj,emp.work_name,emp.rem };
+            emp.rm_date,emp.emp_zw,emp.emp_zj,emp.work_name,emp.shift,emp.rem };
     }
     <ul class="list-group">
         @for (var i = 0; i < texts.Length; i++) { 
