--- a/EmpInfo/Views/Report/PrintUC.cshtml
+++ b/EmpInfo/Views/Report/PrintUC.cshtml
@@ -89,7 +89,7 @@
             <td style="font-weight:bold;">@h.market_administration</td>
         </tr>
         <tr>
-            <td>仓运管理部:</td>
+            <td>营运物流部:</td>
             <td style="font-weight:bold;">@h.stock_administration</td>
             <td>会计部主管:</td>
             <td style="font-weight:bold;">@h.accounting_minister</td>
