--- a/EmpInfo/Views/Apply/ApplyIndex.cshtml
+++ b/EmpInfo/Views/Apply/ApplyIndex.cshtml
@@ -1,4 +1,8 @@
-﻿@section CSS{
+﻿@{
+    string billType = ViewData["billType"] as string;
+    string auts = (string)ViewData["autStr"];
+}
+@section CSS{
     <style type="text/css">
         .badge {
             background-color: #3399CC;
@@ -9,19 +13,29 @@
 @section Scripts{
     <script>
     $(function () {
-        if (parseInt($("#dealingBadge").html()) > 0) {
-            $("#dealingBadge").css("visibility", "visible");
-        }
+        //if (parseInt($("#dealingBadge").html()) > 0) {
+        //    $("#dealingBadge").css("visibility", "visible");
+        //}
+        @*$.post("@Url.Content("~/Apply/GetMyDealingApplyCount")", { billType: "@ViewData["billType"]" }, function (data) {
+            if (data.suc) {
+                if (data.count > 0) {
+                    $("#dealingBadge").html(data.count);
+                    $("#dealingBadge").css("visibility", "visible");
+                }
+            } else {
+                toastr.error(data.msg);
+            }
+        });*@
         $("#beginApplyLink").on("click", function () {
             $.post("@Url.Content("~/WX/HasBindWx")", {}, function (data) {
-                    if (data.suc) {
-                        window.location.href = "@Url.Content("~/Apply/BeginApply?billType=")" + "@ViewData["billType"]";
-                    } else {
-                        toastr.error(data.msg);
-                    }
-                });
+                if (data.suc) {
+                    window.location.href = "@Url.Content("~/Apply/BeginApply?billType=")" + "@billType";
+                } else {
+                    toastr.error(data.msg);
+                }
             });
         });
+    });
     </script>
 }
 
@@ -39,8 +53,16 @@
     </div>
     <div class="list-group">
         <a href="#" class="list-group-item" id="beginApplyLink"><span class="text-danger"><i class="fa fa-fw fa-pencil"></i> 开始申请</span></a>
-        <a href="@string.Concat(Url.Content("~/Apply/GetMyApplyList?billType="),ViewData["billType"])" class="list-group-item"><i class="fa fa-fw fa-th"></i> 我申请的</a>
-        <a href="@string.Concat(Url.Content("~/Apply/GetMyAuditingList?billType="),ViewData["billType"])" class="list-group-item"><i class="fa fa-fw fa-th-list"></i> 我的待办 <span class="badge" id="dealingBadge" style="visibility:hidden;">@ViewData["dealingCount"]</span></a>
-        <a href="@string.Concat(Url.Content("~/Apply/GetMyAuditedList?billType="), ViewData["billType"])" class="list-group-item"><i class="fa fa-fw fa-th-large"></i> 我的已办</a>
+        <a href="@string.Concat(Url.Content("~/Apply/GetMyApplyList?billType="), billType)" class="list-group-item"><i class="fa fa-fw fa-th"></i> 我申请的</a>
+        <a href="@string.Concat(Url.Content("~/Apply/GetMyAuditingList?billType="), billType)" class="list-group-item"><i class="fa fa-fw fa-th-list"></i> 我的待办 <span class="badge" id="dealingBadge" style="visibility:hidden;"></span></a>
+        <a href="@string.Concat(Url.Content("~/Apply/GetMyAuditedList?billType="), billType)" class="list-group-item"><i class="fa fa-fw fa-th-large"></i> 我的已办</a>
+        @if ("EP".Equals(billType)) {
+            if (auts.IndexOf("EPReport") >= 0) {
+            <a href="@Url.Content("~/EP/EquitmentDeps")" class="list-group-item"><i class="fa fa-fw fa-gear"></i> 设备部门维护</a>
+        }
+            if (auts.IndexOf("EPReport") >= 0) {
+            <a href="@Url.Content("~/Report/EPReport")" class="list-group-item"><i class="fa fa-fw fa-file-text-o"></i> 查询报表</a>
+        }
+        }
     </div>
 </div>
