--- a/EmpInfo/Views/Apply/GetMyAuditingList.cshtml
+++ b/EmpInfo/Views/Apply/GetMyAuditingList.cshtml
@@ -35,7 +35,7 @@
             onClickRow: function (row, ele, field) {
                 var sysNo = $.trim(row[0]);
                 var step = $.trim(row[1]);
-                window.location.href = "BeginAuditApply?sysNo=" + sysNo + "&step=" + step;
+                window.location.href = "BeginAuditApply?sysNo=" + sysNo.split(" ")[0] + "&step=" + step;
             }
         });
 
@@ -60,7 +60,7 @@
     <div class="panel-body">
 
         
-        <h4 class="text-danger"><i>可以查看到最多100条待办记录:</i> </h4>
+        <h4 class="text-danger"><i>可以查看到最多400条待办记录:</i> </h4>
         <hr />
         @if (billType.Equals("AL")) { 
             <button class="btn btn-default pull-right" id="exportExcelBt"><i class="fa fa-file-excel-o"></i> 导出到excel</button>
@@ -80,8 +80,7 @@
             <tbody>
                 @foreach (var i in list) {
                     <tr>
-                        <td>@i.sysNo
-                            @if (i.isUserAobrt) {<span class="text-danger">(申请撤销)</span>}
+                        <td>@i.sysNo @if (i.isUserAobrt) {<span class="text-danger">(申请撤销)</span>}
                         </td>
                         <td>@i.step</td>
                         <td>@i.applier</td>
