--- a/EmpInfo/Views/Home/Index.cshtml
+++ b/EmpInfo/Views/Home/Index.cshtml
@@ -349,16 +349,24 @@
             </div>
         </div>
     }
-    <div class="col-xs-6 col-sm-4">
+    @*<div class="col-xs-6 col-sm-4">
         <div class="thumbnail">
             <a href="#" id="SalaryImg"><img src="@Url.Content("~/Content/images/salary.png")" alt="salary"></a>
             <div class="caption">
                 <h3>个人工资</h3>
-                @*<p>可以查询本人的工资概况和最近半年内的发放明细记录</p>
-                    <p><button class="btn btn-primary btn-block" id="SalaryBt">进入查询</button></p>*@
             </div>
         </div>
-    </div>
+    </div>*@
+    if (auts.IndexOf("ModuelTest") >= 0) { 
+        <div class="col-xs-6 col-sm-4">
+            <div class="thumbnail">
+                <a href="@Url.Content("~/Home/EditPublicFundInfo")"><img src="@Url.Content("~/Content/images/public_fund.png")" alt="public_fund"></a>
+                <div class="caption">
+                    <h3>公积金信息</h3>
+                </div>
+            </div>
+        </div>
+    }
     }
     
     
